--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
-NODE_ENV=development
-PORT=3000
-MONGO_USER=root
-MONGO_PASSWORD=123456
-MONGO_DB=favmovies
-MONGO_HOST=mongo
-MONGO_PORT=27017
+PORT=3001
+MONGO_URI=mongodb://root:123456@localhost:27017/favmoviesdb?authSource=admin
+
+INIT_NAME=Admin
+INIT_EMAIL=admin@email.com
+INIT_PASSWORD=Admin_123
+INIT_ROLE=admin
+
+JWT_SECRET=My_Secret_2025
